--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
-    
+    <h1>Github User Tracker</h1>
     <script src="/assets/main.js"></script>
 </body>
 </html>
