--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github User Tracker</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <h1>Github User Tracker</h1>
-    <script src="/assets/main.js"></script>
+    <form id="myForm" autocomplete="off">  
+        <input type="text"  id="search" placeholder="Search for a User" required>
+        <button >Search User</button>
+    </form>
+    <div id="result" class="result"></div>
+    
+    <script src="./assets/main.js"></script>
 </body>
 </html>
