fixed search user part

--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github User Tracker</title>
-    
+    <!-- Bootstrap -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <h1>Github User Tracker</h1>
-    <form id="myForm" autocomplete="off">  
-        <input type="text"  id="search" placeholder="Search for a User" required>
-        <button >Search User</button>
+    <form id="myForm" autocomplete="off" class="container text-center">  
+        <div class="form-group">
+            <input type="text"  id="search" placeholder="Search Github User" required>
+        </div>
+        <div class="form-group">
+            <button class="btn-search">Search</button>
+        </div>
     </form>
+
+    <!-- the code below shows the user profile pic -->
     <div id="result" class="result"></div>
     
     <script src="./assets/main.js"></script>
